feat(Tutorias): Add option for tutorial topic of "GraphQL" (#114)
See issue #113

--- a/modules/recipes_magazin_contenta/config/install/field.storage.node.field_topic.yml
+++ b/modules/recipes_magazin_contenta/config/install/field.storage.node.field_topic.yml
@@ -12,6 +12,9 @@ type: list_string
 settings:
   allowed_values:
     -
+      value: GraphQL
+      label: GraphQL
+    -
       value: 'JSON API'
       label: 'JSON API'
     -
